Fixed buttons on collapsed sidenav

--- a/less/paperhive/affix.less
+++ b/less/paperhive/affix.less
@@ -15,4 +15,8 @@
 	padding: 40px (@grid-gutter-width/2) (@grid-gutter-width/2);
 	z-index: @zindex-navbar-fixed;
     .box-shadow(0 0 10px rgba(0, 0, 0, 0.3));
+
+    &.ph-sidenav-small {
+		padding: @padding-large-vertical 0 0;
+    }
 }
